# Prometheus

./: .env  .env.example  .gitignore  GptCall.py  REFACTORED.md  actions.py  config.py  environment.yml  local_config.json  memory.py  odysseus.py  odysseus_agent.py  odysseus_cli.py  prometheus.py  prometheus_api.py  pseudo_functions.py  pyproject.toml  read_prompts.json  reading.py  readme.md  reason_engine.py  requirements.txt  searching.py  searching_api.py  session_manager.py  test.py  test_function_tool.py  test_json.py  traveler_basic_tests.ipynb  user_agents.json
diagrams/: component_diagram.md  data_flow_diagram.md  mermaid_diagram.md
memory/: __init__.py  memory_manager.py
modules/: reading.py  searching_api.py  validator.py
odysseus/: __init__.py  agent.py
prompts/: coding_prompts.py  pdf_prompts.json  pdf_prompts.py  read_prompts.json  read_prompts.py  search_prompts.json  search_prompts.py  system_prompt.json  system_prompt.py
tools/: __init__.py  brave_search.py  pdf_parser.py  url_utils.py  webpage_parser.py
