[tool.poetry]
name = "prometheus"
version = "0.1.0"
description = "LLMbot"
authors = ["Leszek Bukowski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.6.0"
openai = "^0.28.1"
selenium = "^4.14.0"
bs4 = "^0.0.1"
fire = "^0.5.0"
tiktoken = "^0.5.1"
trafilatura = "^1.6.2"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
